fixed some layout problems

--- a/style.css
+++ b/style.css
@@ -23,12 +23,13 @@
 #main{
     width: 100%;
     max-width: 1000px;
+    height: 100vh;
     margin: 5px auto;
     margin-bottom: 15px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-
+    align-items: center;
 }
 /* --------------- the side container --------------------- */
 #side-container{
@@ -44,7 +45,6 @@
     display: block;
     margin: 10px 5px;
     background-color: rgb(219, 219, 219);
-    columns: #0000;
     width: 200px;
     height: 55px;
     font-size: 20px;
@@ -84,13 +84,11 @@ input[type=range]::-webkit-slider-runnable-track {
     width: 100%;
     height: 10px;
     cursor: pointer;
-    box-shadow: 1px 1px 1px #000000;
     background: #ffffff;
     border-radius: 5px;
     border: 1px solid #000000;
   }
   input[type=range]::-webkit-slider-thumb {
-    box-shadow: 1px 1px 1px #000000;
     border: 1px solid #000000;
     height: 29px;
     width: 28px;
@@ -103,9 +101,15 @@ input[type=range]::-webkit-slider-runnable-track {
 /* --------------- the Second container aka the Grid container ----------------- */
 
 #right-container{
+    max-width: 500px;
     width: 500px;
+    max-height: 500px;
+    height: 500px;    
     background-color: #ffff;
     box-shadow: 0px 0px 15px rgb(112, 112, 112);
+    display: grid;
+    grid-template-columns: repeat(16,1fr);
+    grid-template-rows: repeat(16,1fr);
 }
 
 /* --------------- styling the footer --------------------- */
@@ -132,7 +136,7 @@ footer >a{
     transform: rotate(360deg);
     
 }
-.inp:focus{
+.fo:focus{
     background-color: #414141;
     color: #ffffff;
 }
